fix button on mobile and sort by date scope added to audit log model

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,3 +9,7 @@
 .custom-nav {
 margin-top:25px;
 }
+
+.btn-employee-home {
+  white-space: normal !important;
+}
